test/corpus/operators.txt
================================================================================
arithmetic precedence and left associativity
================================================================================

a - b + c * d / e

--------------------------------------------------------------------------------

(source_file (add_expression (add_expression (lvalue (identifier)) (lvalue (identifier))) (mul_expression (mul_expression (lvalue (identifier)) (lvalue (identifier))) (lvalue (identifier)))))

================================================================================
subtraction is left associative
================================================================================

a - b - c

--------------------------------------------------------------------------------

(source_file (add_expression (add_expression (lvalue (identifier)) (lvalue (identifier))) (lvalue (identifier))))

================================================================================
division is left associative
================================================================================

a / b / c

--------------------------------------------------------------------------------

(source_file (mul_expression (mul_expression (lvalue (identifier)) (lvalue (identifier))) (lvalue (identifier))))

================================================================================
boolean precedence and left associativity
================================================================================

a | b & c & d | e

--------------------------------------------------------------------------------

(source_file (or_expression (or_expression (lvalue (identifier)) (and_expression (and_expression (lvalue (identifier)) (lvalue (identifier))) (lvalue (identifier)))) (lvalue (identifier))))

================================================================================
all binary precedence levels
================================================================================

a + b * c < d & e = f | g

--------------------------------------------------------------------------------

(source_file (or_expression (and_expression (compare_expression (add_expression (lvalue (identifier)) (mul_expression (lvalue (identifier)) (lvalue (identifier)))) (lvalue (identifier))) (compare_expression (lvalue (identifier)) (lvalue (identifier)))) (lvalue (identifier))))

================================================================================
parentheses override arithmetic precedence
================================================================================

(a + b) * c

--------------------------------------------------------------------------------

(source_file (mul_expression (add_expression (lvalue (identifier)) (lvalue (identifier))) (lvalue (identifier))))

================================================================================
unary minus binds tighter than multiplication
================================================================================

-a * b + --c

--------------------------------------------------------------------------------

(source_file (add_expression (mul_expression (lvalue (identifier)) (lvalue (identifier))) (lvalue (identifier))))

================================================================================
unary minus accepts grouped expression
================================================================================

-(a + b) * c

--------------------------------------------------------------------------------

(source_file (mul_expression (add_expression (lvalue (identifier)) (lvalue (identifier))) (lvalue (identifier))))

================================================================================
comparison grouped on left
================================================================================

(a < b) = c

--------------------------------------------------------------------------------

(source_file (compare_expression (compare_expression (lvalue (identifier)) (lvalue (identifier))) (lvalue (identifier))))

================================================================================
comparison grouped on right
================================================================================

a < (b = c)

--------------------------------------------------------------------------------

(source_file (compare_expression (lvalue (identifier)) (compare_expression (lvalue (identifier)) (lvalue (identifier)))))

================================================================================
assignment consumes full expression
================================================================================

a := b + c * d < e & f | g

--------------------------------------------------------------------------------

(source_file (assignment (lvalue (identifier)) (or_expression (and_expression (compare_expression (add_expression (lvalue (identifier)) (mul_expression (lvalue (identifier)) (lvalue (identifier)))) (lvalue (identifier))) (lvalue (identifier))) (lvalue (identifier)))))

================================================================================
if branches consume full expressions
================================================================================

if a then b + c else d * e | f

--------------------------------------------------------------------------------

(source_file (if_expr (lvalue (identifier)) (add_expression (lvalue (identifier)) (lvalue (identifier))) (or_expression (mul_expression (lvalue (identifier)) (lvalue (identifier))) (lvalue (identifier)))))

================================================================================
while body consumes full expression
================================================================================

while a do b + c * d

--------------------------------------------------------------------------------

(source_file (while_expr (lvalue (identifier)) (add_expression (lvalue (identifier)) (mul_expression (lvalue (identifier)) (lvalue (identifier))))))

================================================================================
for body consumes full expression
================================================================================

for i := a to b do c + d * e

--------------------------------------------------------------------------------

(source_file (for_expr (identifier) (lvalue (identifier)) (lvalue (identifier)) (add_expression (lvalue (identifier)) (mul_expression (lvalue (identifier)) (lvalue (identifier))))))

================================================================================
array initializer consumes full expression
================================================================================

ints[a] of b + c * d

--------------------------------------------------------------------------------

(source_file (array_expr (type_id (identifier)) (lvalue (identifier)) (add_expression (lvalue (identifier)) (mul_expression (lvalue (identifier)) (lvalue (identifier))))))

================================================================================
comparison operator <
================================================================================

a + b < c * d

--------------------------------------------------------------------------------

(source_file (compare_expression (add_expression (lvalue (identifier)) (lvalue (identifier))) (mul_expression (lvalue (identifier)) (lvalue (identifier)))))

================================================================================
reject chained comparison < then <
:error
================================================================================

a < b < c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison < then >
:error
================================================================================

a < b > c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison < then <=
:error
================================================================================

a < b <= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison < then >=
:error
================================================================================

a < b >= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison < then =
:error
================================================================================

a < b = c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison < then <>
:error
================================================================================

a < b <> c

--------------------------------------------------------------------------------



================================================================================
comparison operator >
================================================================================

a + b > c * d

--------------------------------------------------------------------------------

(source_file (compare_expression (add_expression (lvalue (identifier)) (lvalue (identifier))) (mul_expression (lvalue (identifier)) (lvalue (identifier)))))

================================================================================
reject chained comparison > then <
:error
================================================================================

a > b < c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison > then >
:error
================================================================================

a > b > c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison > then <=
:error
================================================================================

a > b <= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison > then >=
:error
================================================================================

a > b >= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison > then =
:error
================================================================================

a > b = c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison > then <>
:error
================================================================================

a > b <> c

--------------------------------------------------------------------------------



================================================================================
comparison operator <=
================================================================================

a + b <= c * d

--------------------------------------------------------------------------------

(source_file (compare_expression (add_expression (lvalue (identifier)) (lvalue (identifier))) (mul_expression (lvalue (identifier)) (lvalue (identifier)))))

================================================================================
reject chained comparison <= then <
:error
================================================================================

a <= b < c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison <= then >
:error
================================================================================

a <= b > c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison <= then <=
:error
================================================================================

a <= b <= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison <= then >=
:error
================================================================================

a <= b >= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison <= then =
:error
================================================================================

a <= b = c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison <= then <>
:error
================================================================================

a <= b <> c

--------------------------------------------------------------------------------



================================================================================
comparison operator >=
================================================================================

a + b >= c * d

--------------------------------------------------------------------------------

(source_file (compare_expression (add_expression (lvalue (identifier)) (lvalue (identifier))) (mul_expression (lvalue (identifier)) (lvalue (identifier)))))

================================================================================
reject chained comparison >= then <
:error
================================================================================

a >= b < c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison >= then >
:error
================================================================================

a >= b > c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison >= then <=
:error
================================================================================

a >= b <= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison >= then >=
:error
================================================================================

a >= b >= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison >= then =
:error
================================================================================

a >= b = c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison >= then <>
:error
================================================================================

a >= b <> c

--------------------------------------------------------------------------------



================================================================================
comparison operator =
================================================================================

a + b = c * d

--------------------------------------------------------------------------------

(source_file (compare_expression (add_expression (lvalue (identifier)) (lvalue (identifier))) (mul_expression (lvalue (identifier)) (lvalue (identifier)))))

================================================================================
reject chained comparison = then <
:error
================================================================================

a = b < c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison = then >
:error
================================================================================

a = b > c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison = then <=
:error
================================================================================

a = b <= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison = then >=
:error
================================================================================

a = b >= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison = then =
:error
================================================================================

a = b = c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison = then <>
:error
================================================================================

a = b <> c

--------------------------------------------------------------------------------



================================================================================
comparison operator <>
================================================================================

a + b <> c * d

--------------------------------------------------------------------------------

(source_file (compare_expression (add_expression (lvalue (identifier)) (lvalue (identifier))) (mul_expression (lvalue (identifier)) (lvalue (identifier)))))

================================================================================
reject chained comparison <> then <
:error
================================================================================

a <> b < c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison <> then >
:error
================================================================================

a <> b > c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison <> then <=
:error
================================================================================

a <> b <= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison <> then >=
:error
================================================================================

a <> b >= c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison <> then =
:error
================================================================================

a <> b = c

--------------------------------------------------------------------------------



================================================================================
reject chained comparison <> then <>
:error
================================================================================

a <> b <> c

--------------------------------------------------------------------------------



